--- a/SimplePaint/SimplePaint.csproj
+++ b/SimplePaint/SimplePaint.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Shapes.cs" />
+    <Compile Include="ShapesFactory.cs" />
     <EmbeddedResource Include="DialogNew.resx">
       <DependentUpon>DialogNew.cs</DependentUpon>
     </EmbeddedResource>
