--- a/SimplePaint/SimplePaint.csproj
+++ b/SimplePaint/SimplePaint.csproj
@@ -56,6 +56,12 @@
     <Compile Include="DialogNew.Designer.cs">
       <DependentUpon>DialogNew.cs</DependentUpon>
     </Compile>
+    <Compile Include="DrawCanvas.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="DrawCanvas.Designer.cs">
+      <DependentUpon>DrawCanvas.cs</DependentUpon>
+    </Compile>
     <Compile Include="Drawing.cs" />
     <Compile Include="FormMain.cs">
       <SubType>Form</SubType>
@@ -69,6 +75,9 @@
     <Compile Include="ShapesFactory.cs" />
     <EmbeddedResource Include="DialogNew.resx">
       <DependentUpon>DialogNew.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DrawCanvas.resx">
+      <DependentUpon>DrawCanvas.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormMain.resx">
       <DependentUpon>FormMain.cs</DependentUpon>
