--- a/SimplePaint/SimplePaint.csproj
+++ b/SimplePaint/SimplePaint.csproj
@@ -66,6 +66,7 @@
       <DependentUpon>DrawCanvas.cs</DependentUpon>
     </Compile>
     <Compile Include="Drawing.cs" />
+    <Compile Include="DrawToolBox.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -167,6 +168,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="image.ico" />
+    <None Include="Resources\drag_40px.png" />
+    <None Include="Resources\fill_color_40px.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
