--- a/SimplePaint/SimplePaint.csproj
+++ b/SimplePaint/SimplePaint.csproj
@@ -67,6 +67,7 @@
     </Compile>
     <Compile Include="Drawing.cs" />
     <Compile Include="DrawToolBox.cs" />
+    <Compile Include="DrawTools.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -83,6 +84,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Shapes.cs" />
     <Compile Include="ShapesFactory.cs" />
+    <Compile Include="StackList.cs" />
     <EmbeddedResource Include="DialogNew.resx">
       <DependentUpon>DialogNew.cs</DependentUpon>
     </EmbeddedResource>
