--- a/SimplePaint/SimplePaint.csproj
+++ b/SimplePaint/SimplePaint.csproj
@@ -84,7 +84,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Shapes.cs" />
     <Compile Include="ShapesFactory.cs" />
-    <Compile Include="StackList.cs" />
+    <Compile Include="RewindableShapesStorage.cs" />
     <EmbeddedResource Include="DialogNew.resx">
       <DependentUpon>DialogNew.cs</DependentUpon>
     </EmbeddedResource>
